[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "py-gradeup"
dynamic = ["version", "dependencies"]
description = "Upgrade Python projects to the latest Python version and update dependencies."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Author"}]

[project.scripts]
py-gradeup = "py_gradeup.cli:main"

[tool.hatch.version]
path = "src/py_gradeup/__init__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --cov-report=xml --cov-fail-under=100"
pythonpath = ["src"]

[tool.interrogate]
fail-under = 100

exclude = [".venv", "test_graph"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "D", "I", "W", "UP", "B", "SIM"]
ignore = ["D104", "D203", "D212"] # Missing docstring in public package, 1 blank line required before class docstring, Multi-line docstring summary should start at the first line

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"